[package]
name = "hexput-ast-api"
version = "0.1.0"
edition = "2024"
description = "Core AST parsing and processing library"

[dependencies]
logos = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
