[package]
name = "hexput-ast-api"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/hexput/main"
license = "MIT"
keywords = ["hexput", "ast", "parsing"]
description = "Core AST parsing and processing library"
categories = ["parsing"]

[dependencies]
logos = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"] }
