[package]
name = "hexput-ast-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the AST resolver"

[dependencies]
hexput-ast-api = { path = "../hexput-ast-api" }
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
