[package]
name = "hexput-runtime"
version = "0.1.3"
edition = "2021"
description = "WebSocket runtime server for Hexput AST processing"
license = "MIT"
keywords = ["hexput", "ast", "parsing", "runtime", "websocket"]
categories = ["parsing", "network-programming", "asynchronous", "compilers"]

[dependencies]
hexput-ast-api = { version = "0.1.6" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.19.0"
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
log = "0.4.17"
env_logger = "0.10.0"
clap = { version = "4.3.0", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "hexput-runtime"
path = "src/main.rs"